[metadata]
name = pyall
version = attr: pyall.__version__
url = https://pyall.hakancelik.dev/
author = Hakan Celik
author_email = hakancelikdev@gmail.com
description = attr: pyall.__description__
long_description = file: README.md
keywords =
    all
long_description_content_type = text/markdown
license = GNU General Public License v3.0
license_files = 
    file: LICENSE
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://pyall.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/pyall/issues/
    Changelog = https://pyall.hakancelik.dev/changelog

[options]
python_requires = >=3.8
include_package_data = true
zip_safe = true
packages =
    pyall
package_dir =
    =src
install_requires =

[options.entry_points]
console_scripts =
    pyall = pyall.__main__:main

[options.extras_require]
docs =
    mkdocs==1.3.0
    mkdocs-material==8.3.6
    mkdocs-markdownextradata-plugin==0.2.5
    mkdocs-minify-plugin==0.5.0
    mkdocs-git-revision-date-localized-plugin==1.0.1
test =
    pytest==6.2.4
    pytest-cov==2.12.1

[options.package_data]
* =
  py.typed
